--- a/styles/component.module.css
+++ b/styles/component.module.css
@@ -1,3 +1,13 @@
+.header {
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-image: url('../public/header.png');
+    background-size: cover;
+    background-position: center;
+}
+
 .navbar {
     display: flex;
     flex-direction: row;
@@ -574,6 +584,10 @@
 }
 
 @media (min-width: 1026px) and (max-width: 1400px) {
+    .header {
+        background-position: right 10% bottom;
+    }
+
     .navbar {
         gap: 8vw;
     }
@@ -597,6 +611,10 @@
 }
 
 @media (min-width: 750px) and (max-width: 1025px) {
+    .header {
+        background-position: right 10% bottom;
+    }
+
     .navbar {
         visibility: hidden;
         height: 0;
@@ -704,6 +722,10 @@
 }
 
 @media (min-width: 450px) and (max-width: 750px) {
+    .header {
+        background-position: right 10% bottom;
+    }
+
     .navbar {
         visibility: hidden;
         height: 0;
@@ -848,6 +870,10 @@
 }
 
 @media (min-width: 380px) and (max-width: 450px) {
+    .header {
+        background-position: right 10% bottom;
+    }
+
     .navbar {
         visibility: hidden;
         height: 0;
@@ -996,6 +1022,10 @@
 }
 
 @media (min-width: 350px) and (max-width: 380px) {
+    .header {
+        background-position: right 10% bottom;
+    }
+
     .navbar {
         visibility: hidden;
         height: 0;
@@ -1156,6 +1186,10 @@
 }
 
 @media (min-width: 0px) and (max-width: 350px) {
+    .header {
+        background-position: right 10% bottom;
+    }
+
     .navbar {
         visibility: hidden;
         height: 0;
